--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "require": {
         "php": ">=7.1.3",
         "guzzlehttp/guzzle": "^7.3",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "ramsey/uuid": "^4.2",
+      "ext-json": "*",
+      "ext-soap": "*",
+      "ext-simplexml": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
